--- a/package.json
+++ b/package.json
@@ -3,23 +3,39 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.10.2",
+    "compression": "^1.4.3",
+    "connect-mongo": "^0.8.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "ejs": "~2.2.3",
     "express": "~4.11.1",
     "express-session": "^1.10.4",
+    "method-override": "^2.3.2",
+    "mongo-connect": "0.0.6",
     "mongoose": "^3.8.25",
     "morgan": "~1.5.1",
+    "nodemon": "^1.3.7",
     "passport": "^0.2.1",
-    "serve-favicon": "~2.2.0"
+    "passport-github": "^0.1.5",
+    "serve-favicon": "~2.2.0",
+    "view-helpers": "^0.1.5"
   },
   "description": "An example todo App built with the MEAN stack",
   "main": "app.js",
   "devDependencies": {},
   "author": "Tom Tsiliopoulos",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tsiliopoulos/todoApp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tsiliopoulos/todoApp/issues"
+  },
+  "homepage": "https://github.com/tsiliopoulos/todoApp"
 }
