--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.10.2",
     "compression": "^1.4.3",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^0.8.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
@@ -22,6 +23,7 @@
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
     "passport-github": "^0.1.5",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.2.0",
     "view-helpers": "^0.1.5"
   },
