--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.2.1",
     "passport-github": "^0.1.5",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.3",
     "serve-favicon": "~2.2.0",
     "view-helpers": "^0.1.5"
   },
