--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
     "passport-github": "^0.1.5",
+    "passport-linkedin": "^0.1.3",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
     "serve-favicon": "~2.2.0",
